--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -263,3 +263,71 @@ body {
     color: var(--text-secondary);
     padding: 0 5px;
 }
+
+.seccion-actualizar{
+    display: none;
+}
+
+
+.container-actualizar{
+    background-color: #271F1C;
+    padding: 30px;
+    width: 30%;
+    border-radius: 20px;
+}
+
+.container-actualizar form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.entrada{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.cerrar-crear{
+    display: flex;
+    justify-content: end;
+}
+
+.cerrar-crear button{
+    background-color: transparent;
+    border: none;
+    color: #e74c3c;
+    font-size: 20px;    
+}
+
+
+.container-eliminar{
+    background-color: #271F1C;
+    width: 50%;
+    text-align: center;
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.container-eliminar div{
+    margin: 10px;
+}
+
+.seccion-eliminar{
+    display: none;
+}
+
+
+.overlay {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
