Cambios en apartado gráfico de los botones en el home y en el login

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -331,3 +331,55 @@ body {
     align-items: center;
     z-index: 999;
 }
+
+.btn-eliminar{
+    background-color: #e74c3c;
+    color: #F7EDED;
+    font-size: 15px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.form-control{
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.form-control1{
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
+    color: #000;
+}
+
+.btn-submit{
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 15px;
+}
+
+.btn-cerrarsesion{
+    background-color: #e74c3c;
+    color: #F7EDED;
+    font-size: 15px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
