--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -90,14 +90,14 @@
                     <button (click)="cerrarCrear()"><i class="bi bi-x-circle-fill"></i></button>
                 </div>
                 <form action=""  (ngSubmit)="crearResenia()">
-                    <h2>Crea una Reseña</h2>
+                    <h2>Actualizar Reseña</h2>
                     <div class="entrada">
                         <label for="">Nombre del Restaurante</label>
                         <input type="text" [(ngModel)]="resenia.nombreRestaurante" name="nombre restaurante" class= "form-control">
                     </div>
                     <div class="entrada">
                         <label for="">Calificación</label>
-                        <select name="calificacion" id=""  [(ngModel)]="resenia.calificacion" class = "form-control1">
+                        <select name="calificacion" id=""  [(ngModel)]="resenia.calificacion" class= "form-control1">
                             <option value="0">Calificación</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="entrada">
                         <label for="">Reseña</label>
-                        <textarea name="resenia" id="" [(ngModel)]="resenia.resenia" class = "form-control"></textarea>
+                        <textarea name="resenia" id="" [(ngModel)]="resenia.resenia" class= "form-control"></textarea>
                     </div>
                      <div class="alert alert-danger" *ngIf="errorMensaje">
                         {{ errorMensaje }}
@@ -130,12 +130,12 @@
                     <h2>Crea una Reseña</h2>
                     <div class="entrada">
                         <label for="">Nombre del Restaurante</label>
-                        <input type="text" [(ngModel)]="resenia.nombreRestaurante" name="nombre restaurante">
+                        <input type="text" [(ngModel)]="resenia.nombreRestaurante" name="nombre restaurante" class= "form-control">
                     </div>
                     <div class="entrada">
                         <label for="">Calificación</label>
-                        <select name="calificacion" id=""  [(ngModel)]="resenia.calificacion" >
-                            <option value="0">calificación</option>
+                        <select name="calificacion" id=""  [(ngModel)]="resenia.calificacion" class= "form-control1">
+                            <option value="0">Calificación</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="entrada">
                         <label for="">Reseña</label>
-                        <textarea name="resenia" id="" [(ngModel)]="resenia.resenia"></textarea>
+                        <textarea name="resenia" id="" [(ngModel)]="resenia.resenia" class= "form-control"></textarea>
                     </div>
                      <div class="alert alert-danger" *ngIf="errorMensaje">
                         {{ errorMensaje }}
