Cambio en color de fuente y texto en editar y actualizar reseñas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -90,7 +90,7 @@
                     <button (click)="cerrarCrear()"><i class="bi bi-x-circle-fill"></i></button>
                 </div>
                 <form action=""  (ngSubmit)="crearResenia()">
-                    <h2>Actualizar Reseña</h2>
+                    <h2>Editar Reseña</h2>
                     <div class="entrada">
                         <label for="">Nombre del Restaurante</label>
                         <input type="text" [(ngModel)]="resenia.nombreRestaurante" name="nombre restaurante" class= "form-control">
@@ -127,7 +127,7 @@
                     <button (click)="cerrarCrear()"><i class="bi bi-x-circle-fill"></i></button>
                 </div>
                 <form action=""  (ngSubmit)="actualizarResenia()">
-                    <h2>Crea una Reseña</h2>
+                    <h2>Actualizar una Reseña</h2>
                     <div class="entrada">
                         <label for="">Nombre del Restaurante</label>
                         <input type="text" [(ngModel)]="resenia.nombreRestaurante" name="nombre restaurante" class= "form-control">
