actualizacion de los inputs del login y el registro

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -79,7 +79,7 @@
                 <h5>¿Deseas eliminar esta reseña?</h5>
                 <div>
                     <button (click)="eliminarResenia()" class="btn-eliminar" >Eliminar</button>
-                    <button  class="btn-eliminar" >Cancelar</button>
+                    <button  class="btn-eliminar" (click)="cerrarEliminar()">Cancelar</button>
                 </div>
             </div>
         </section>
