--- a/src/app/components/regitrarse/regitrarse.component.html
+++ b/src/app/components/regitrarse/regitrarse.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="entrada">
             <label for="">Contraseña</label>
-            <input type="text" placeholder="Contraseña" [(ngModel)]="usuarioRequest.password" name="password">
+            <input type="password" placeholder="Contraseña" [(ngModel)]="usuarioRequest.password" name="password">
         </div>
         <div class="alert alert-danger" *ngIf="errorMensaje">
             {{ errorMensaje }}
