actualizacion del boton actualizar reseña

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -150,7 +150,7 @@
                      <div class="alert alert-danger" *ngIf="errorMensaje">
                         {{ errorMensaje }}
                     </div>
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary btn-eliminar">
                         <span *ngIf="isLoading" class="spinner-border spinner-border-sm me-2"></span>
                         {{ isLoading ? 'Actualizando Reseña...' : 'Actualizar' }}
                     </button>
